# CSU44052_final_project

./: CMakeLists.txt
final/: bot.frag  bot.vert  box.vert  camera.h  cone.frag  cone.vert  depth.frag  depth.vert  fft.frag  fft.vert  fft_horizontal.frag  fft_horizontal.vert  fft_vertical.frag  fft_vertical.vert  final.cpp  korok.frag  korok.vert  skybox.frag  skybox.vert  water.frag  water.vert
final/model/dolphin/: license.txt  scene.gltf
final/model/shark/: license.txt  scene.gltf
final/model/turtle/: turtle.gltf
final/shader/: bot.vert
